fix(inline-alert): apply border for cleaner contrast against bg

--- a/src/components/beta/gux-alert/gux-inline-alert.less
+++ b/src/components/beta/gux-alert/gux-inline-alert.less
@@ -38,20 +38,24 @@
   &.gux-info {
     color: @gux-black-80;
     background-color: @gux-grey-90;
+    border: 1px solid @gux-grey-50;
   }
 
   &.gux-error {
     color: @gux-alert-red-30;
     background-color: @gux-alert-red-100;
+    border: 1px solid @gux-alert-red-90;
   }
 
   &.gux-warning {
     color: @gux-alert-yellow-30;
     background-color: @gux-alert-yellow-100;
+    border: 1px solid @gux-alert-yellow-90;
   }
 
   &.gux-success {
     color: @gux-alert-green-30;
     background-color: @gux-alert-green-100;
+    border: 1px solid @gux-alert-green-90;
   }
 }
